# acido

./: .gitattributes  CHANGELOG.md  DOCKER.md  Dockerfile  Dockerfile.lambda  Dockerfile.lambda.secrets  GITHUB_RUNNERS.md  GOLANG_MIGRATION_ANALYSIS.md  GOLANG_MIGRATION_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_GITHUB_RUNNERS.md  IMPLEMENTATION_SUMMARY_SECRETS.md  LAMBDA.md  LAMBDA_API_EXAMPLES.md  LICENSE  LICENSE-MIT  MULTI_REGION_EXAMPLES.md  NETWORK_REFACTOR_SUMMARY.md  PORT_FORWARDING_INDEX.md  PORT_FORWARDING_PROPOSAL.md  PORT_FORWARDING_SUMMARY.md  README.md  SECRETS.md  build.sh  example_lambda_payload.json  example_lambda_secrets_create_payload.json  example_lambda_secrets_retrieve_payload.json  install.sh  lambda_handler.py  lambda_handler_secrets.py  requirements.txt  setup.py  test_create_with_packages.py  test_lambda_handler.py  test_lambda_handler_secrets.py
.github/: AZURE_PERMISSIONS.md  CI_SETUP.md
acido/: cli.py
acido-client/: MANIFEST.in  README.md  pyproject.toml  setup.py
acido-client/acido_client/: __init__.py  cli.py  client.py
acido-client/examples/: example_usage.py
acido-client/tests/: __init__.py  test_client.py
docs/: AZURE_FIREWALL.md  EXPOSE_IP_FEATURE.md  GITHUB_RUNNERS.md  IMPLEMENTATION_SUMMARY.md  IMPLEMENTATION_SUMMARY_JSON_API.md  LAMBDA_API_EXAMPLES.md  LOAD_BALANCER_IMPLEMENTATION.md  LOAD_BALANCER_IMPLEMENTATION_PROMPT.md  LOAD_BALANCER_QUICKSTART.md  PORT_FORWARDING_DIAGRAMS.md  PORT_FORWARDING_IMPLEMENTATION_PROMPT.md  PORT_FORWARDING_INDEX.md  PORT_FORWARDING_README.md  PORT_FORWARDING_SUMMARY.md  (+4 more)
(+43 files in other folders)
